--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "scripts": {
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
